added funcitonality for the extension to find quesitons and answers

--- a/sidebar.html
+++ b/sidebar.html
@@ -38,6 +38,11 @@
     <button id="toggleSolve">Start Solving</button>
     
     <h3>Debug Tools</h3>
+    <div>
+      <button id="grabQuestion">Grab Question and Answers</button>
+      <div id="questionOutput"></div>
+      <div id="answersOutput"></div>
+    </div>
     <div style="display: flex; gap: 8px;">
       <button id="press1">Press 1</button>
       <button id="press2">Press 2</button>
