--- a/sidebar.html
+++ b/sidebar.html
@@ -25,12 +25,56 @@
     input, button {
       margin: 5px 0;
     }
+    .chat-container {
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+      margin-top: 16px;
+    }
+    .chat-messages {
+      height: 200px;
+      border: 1px solid #ccc;
+      overflow-y: auto;
+      padding: 8px;
+    }
+    .message {
+      margin: 4px 0;
+      padding: 4px;
+    }
+    .user-message {
+      background: #e6f2ff;
+      border-radius: 4px;
+    }
+    .bot-message {
+      background: #f0f0f0;
+      border-radius: 4px;
+    }
+    .chat-input {
+      display: flex;
+      gap: 8px;
+    }
+    #messageInput {
+      flex-grow: 1;
+    }
   </style>
 </head>
 <body>
   <div class="container">
     <h2>Blooket Solver</h2>
     
+    <div>
+      <h3>PPLX Chat</h3>
+      <input type="password" id="pplxToken" placeholder="Enter PPLX API Token">
+      <button id="saveToken">Save Token</button>
+      <div class="chat-container">
+        <div class="chat-messages" id="chatMessages"></div>
+        <div class="chat-input">
+          <input type="text" id="messageInput" placeholder="Type your message...">
+          <button id="sendMessage">Send</button>
+        </div>
+      </div>
+    </div>
+
     <h3>Debug Tools</h3>
     <div>
       <button id="grabQuestion">Grab Question and Answers</button>
