switch from pplx to gemini

--- a/sidebar.html
+++ b/sidebar.html
@@ -63,8 +63,8 @@
     <h2>Blooket Solver</h2>
     
     <div>
-      <h3>PPLX Chat</h3>
-      <input type="password" id="pplxToken" placeholder="Enter PPLX API Token">
+      <h3>Gemini Chat</h3>
+      <input type="password" id="geminiToken" placeholder="Enter PPLX API Token">
       <button id="saveToken">Save Token</button>
       <div class="chat-container">
         <div class="chat-messages" id="chatMessages"></div>
