add auto answer button

--- a/sidebar.html
+++ b/sidebar.html
@@ -77,6 +77,9 @@
 
     <h3>Debug Tools</h3>
     <div>
+      <button id="answer">Answer</button>
+    </div>
+    <div>
       <button id="grabQuestion">Grab Question and Answers</button>
       <div id="questionOutput"></div>
       <div id="answersOutput"></div>
