fixing up some things

--- a/sidebar.html
+++ b/sidebar.html
@@ -64,7 +64,7 @@
     
     <div>
       <h3>Gemini Chat</h3>
-      <input type="password" id="geminiToken" placeholder="Enter PPLX API Token">
+      <input type="password" id="geminiToken" placeholder="Enter Gemini API Token">
       <button id="saveToken">Save Token</button>
       <div class="chat-container">
         <div class="chat-messages" id="chatMessages"></div>
