added auto mode

--- a/sidebar.html
+++ b/sidebar.html
@@ -78,6 +78,13 @@
     <h3>Debug Tools</h3>
     <div>
       <button id="answer">Answer</button>
+      <div style="margin-top: 8px;">
+        <label style="display: flex; align-items: center; gap: 8px;">
+          <input type="checkbox" id="autoAnswerToggle">
+          Auto Answer Mode
+          <span id="autoAnswerStatus" style="color: gray;">(Idle)</span>
+        </label>
+      </div>
     </div>
     <div>
       <button id="grabQuestion">Grab Question and Answers</button>
