added logging for if the question was correct or not

--- a/sidebar.html
+++ b/sidebar.html
@@ -107,6 +107,7 @@
         <button id="press3">Press 3</button>
         <button id="press4">Press 4</button>
       </div>
+      <div id="resultOutput" style="margin-top: 8px;"></div>
     </div>
 
     <button type="button" class="collapsible">LLM Settings</button>
